--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.example'
+group = 'com.getit'
 version = '0.0.1-SNAPSHOT'
 description = 'demo'
 
@@ -27,6 +27,7 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // 로그인 관련 의존성 ->
+    implementation 'org.jboss.logging:jboss-logging:3.6.1.Final'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
